--- a/frontend/src/assets/styles/_variables.scss
+++ b/frontend/src/assets/styles/_variables.scss
@@ -109,7 +109,7 @@ $sidebar-width-lg: 255px;
 $sidebar-width-mini: 185px;
 $sidebar-width-icon: 70px;
 
-$sidebar-light-bg: #fff;
+$sidebar-light-bg: #4fb8e7;
 $sidebar-light-menu-color: #4a4a4a;
 $sidebar-light-submenu-color: $sidebar-light-menu-color;
 $sidebar-light-menu-active-bg: #fafbfc;
@@ -179,7 +179,8 @@ $icon-only-menu-bg-dark: $sidebar-dark-bg;
 ///////// NAVBAR ////////
 
 $navbar-height: 63px;
-$navbar-bg: linear-gradient(120deg, #2f78e9, #128bfc, #18bef1);
+// $navbar-bg: linear-gradient(120deg, #2f78e9, #128bfc, #18bef1);
+$navbar-bg: #4fb8e7;
 $navbar-menu-color: #fff;
 $navbar-font-size: 12px;
 $navbar-icon-font-size: 1.25rem;
