Login pages change

--- a/frontend/src/app/pages/Login/LoginVerify.css
+++ b/frontend/src/app/pages/Login/LoginVerify.css
@@ -1,7 +1,12 @@
 .btn-primary {
   color: #fff;
-  background-color: #0099ff;
+  background-color: black;
   /* background-color: cutom-color; */
-  border-color: #0099ff;
+  border-color: black;
   /* border-color: cutom-cor; */
+}
+
+
+.formcontainer {
+  background-color: red;
 }
