--- a/frontend/src/assets/styles/components/landing-screens/_auth.scss
+++ b/frontend/src/assets/styles/components/landing-screens/_auth.scss
@@ -20,7 +20,7 @@
     border-radius: 100%;
   }
   .auth-form-light {
-    background: $white;
+    background: #4fb8e7;
     select {
       color: $input-placeholder-color;
     }
